--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/style.css">
   <title>QuickBoard</title>
 </head>
 <body>
-  
+  <div class="home-page">
+    <h1>MASOMO BORA HIGH SCHOOL</h1>
+    <h2>Intergrated Examination Management System</h2>
+  </div>
 </body>
 </html>
