add html form codes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,33 @@
   <div class="home-page">
     <h1>MASOMO BORA HIGH SCHOOL</h1>
     <h2>Intergrated Examination Management System</h2>
+
+  <div class="formbx">
+    <h2>Log In</h2>
+
+    <form>
+
+       <div class="inputbx">
+         <span>Student Id</span>
+         <input type="text" name="Enter Student Id">
+       </div>
+
+       <div class="inputbx">
+        <span>Password</span>
+        <input type="password" name="Enter password">
+      </div>
+
+      <div class="checkbx">
+        <label><input type="checkbox" name=""> Remember Me</label>
+      </div>
+    
+      <div class="inputbx">
+        <input type="submit" value="submit" name="">
+      </div>
+
+      
+    </form>
+
   </div>
 </body>
 </html>
