--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>QuickBoard</title>
 </head>
 <body>
+  <header>
   <div class="home-page">
     <h1>MASOMO BORA HIGH SCHOOL</h1>
     <h2>Intergrated Examination Management System</h2>
@@ -32,12 +33,14 @@
       </div>
     
       <div class="inputbx">
-        <input type="submit" value="submit" name="">
+        <a href="page2.html">submit</a>
+       <!-- <input type="submit" value="SUBMIT" name="">---->
       </div>
 
-      
+
     </form>
 
   </div>
+</header>
 </body>
 </html>
