--- a/page2.html
+++ b/page2.html
@@ -6,36 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/style.css">
   <link rel="javascript" href="index.js">
-  <title>QuickBoard</title>
+  <title>Quizzes</title>
 </head>
 <body>
   <header>
-  <div class="home-page">
+  <div class="quiz">
     <h1>MASOMO BORA HIGH SCHOOL</h1>
     <h2>Intergrated Examination Management System</h2>
-
-  <div class="formbx">
-    <h2>Log In</h2>
-
-    <form>
-
-       <div class="inputbx">
-         <span>Student Id</span>
-         <input type="text" name="Enter Student Id">
-       </div>
-
-       <div class="inputbx">
-        <span>Password</span>
-        <input type="password" name="Enter password">
-      </div>
-
-      <div class="checkbx">
-        <label><input type="checkbox" name=""> Remember Me</label>
-      </div>
+ </div>
+  <div class="take-quiz">
+    <h2>Instructions</h2>
     
+    <ul>
+      <li><p>this test consist of twoo section ensure you answer all</p></li>
+      <li><p>answer all question provided</p></li>
+      <li><p>this test consist of twoo section ensure you answer all</p></li>
+      <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></li>
+      <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></li>
+    </ul>
+   
       <div class="inputbx">
         <a href="page2.html">submit</a>
-       <!-- <input type="submit" value="SUBMIT" name="">---->
+      
       </div>
 
 
