add style for page2.html

--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,7 @@
   <title>Quizzes</title>
 </head>
 <body>
-  <header>
+  <section class="header">
   <div class="quiz">
     <h1>MASOMO BORA HIGH SCHOOL</h1>
     <h2>Intergrated Examination Management System</h2>
@@ -34,6 +34,6 @@
     </form>
 
   </div>
-</header>
+  </section>
 </body>
 </html>
