html multiple question form code

--- a/page3.html
+++ b/page3.html
@@ -9,31 +9,51 @@
   <title>Quizzes</title>
 </head>
 <body>
-  <section class="header">
-  <div class="quiz">
-    <h1>MASOMO BORA HIGH SCHOOL</h1>
-    <h2>Intergrated Examination Management System</h2>
- </div>
-  <div class="take-quiz">
-    <h2>Instructions</h2>
-    
-    <ul>
-      <li><p>this test consist of twoo section ensure you answer all</p></li>
-      <li><p>answer all question provided</p></li>
-      <li><p>this test consist of twoo section ensure you answer all</p></li>
-      <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></li>
-      <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></li>
-    </ul>
-   
-      <div class="inputbx">
-        <a href="page2.html">submit</a>
-      
-      </div>
+  <div class="question">
+    <form name="form-quiz" id="form1">
 
+    <div>
+      <p>1. Which of the following are not server-side Javascript objects? </p>
+      <p><input type="radio" name="quiz1" value="Date">A. Date</p>
+      <p><input type="radio" name="quiz1" value="FileUpload">B. FileUpload</p>
+      <p><input type="radio" name="quiz1" value="Function">C. Function</p>
+      <p><input type="radio" name="quiz1" value="All of the Above">D.  All of the above</p>
+    </div>
 
+    <div>
+      <p>2. Which object in Javascript doesn’t have a prototype? </p>
+      <p><input type="radio" name="quiz2" value="Base Object">A. Base Object</p>
+      <p><input type="radio" name="quiz2" value="All objects have a protoytpe">B. All objects have a protoytpe</p>
+      <p><input type="radio" name="quiz2" value="None of the objects have a prototype">C. None of the objects have a prototype</p>
+      <p><input type="radio" name="quiz2" value="All of the Above">D.  none of the above</p>
+    </div>
+
+    <div>
+      <p>3.How do we write a comment in javascript? </p>
+      <p><input type="radio" name="quiz3" value="/* */">A. /* */</p>
+      <p><input type="radio" name="quiz3" value="//">B. //</p>
+      <p><input type="radio" name="quiz3" value="#">C. #</p>
+      <p><input type="radio" name="quiz3" value="$ $">D.  A$ $</p>
+    </div>
+
+    <div>
+      <p>4. What does … operator do in JS? </p>
+      <p><input type="radio" name="quiz4" value="It is used to spread iterables to individual elements">A. It is used to spread iterables to individual elements</p>
+      <p><input type="radio" name="quiz4" value="FIt is used to describe a datatype of undefined size">B. It is used to describe a datatype of undefined size</p>
+      <p><input type="radio" name="quiz4" value="No such operator exist">C. No such operator exist</p>
+      <p><input type="radio" name="quiz4" value="None of the above">D.  None of the above</p>
+    </div>
+
+    <div>
+      <p>5. How to stop an interval timer in Javascript? </p>
+      <p><input type="radio" name="quiz1" value="learInterval">A. ClearInterval</p>
+      <p><input type="radio" name="quiz1" value="clearTimer">B. clearTimer</p>
+      <p><input type="radio" name="quiz1" value="intervalOver">C. intervalOver</p>
+      <p><input type="radio" name="quiz1" value="None of the above">D.  None of the above</p>
+    </div>
+    <input type="button" name="" value="SUBMIT"
     </form>
 
   </div>
-  </section>
 </body>
 </html>
