create button to submit answers

--- a/page3.html
+++ b/page3.html
@@ -51,7 +51,7 @@
       <p><input type="radio" name="quiz1" value="intervalOver">C. intervalOver</p>
       <p><input type="radio" name="quiz1" value="None of the above">D.  None of the above</p>
     </div>
-    <input type="button" name="" value="SUBMIT"
+    <input type="button" name="" value="SUBMIT">
     </form>
 
   </div>
