add javasript link to html

--- a/page3.html
+++ b/page3.html
@@ -9,6 +9,7 @@
   <title>Quizzes</title>
 </head>
 <body>
+  <section class="container">
   <div class="question">
     <form name="form-quiz" id="form1">
 
@@ -46,14 +47,18 @@
 
     <div>
       <p>5. How to stop an interval timer in Javascript? </p>
-      <p><input type="radio" name="quiz1" value="learInterval">A. ClearInterval</p>
-      <p><input type="radio" name="quiz1" value="clearTimer">B. clearTimer</p>
-      <p><input type="radio" name="quiz1" value="intervalOver">C. intervalOver</p>
-      <p><input type="radio" name="quiz1" value="None of the above">D.  None of the above</p>
+      <p><input type="radio" name="quiz5" value="learInterval">A. ClearInterval</p>
+      <p><input type="radio" name="quiz5" value="clearTimer">B. clearTimer</p>
+      <p><input type="radio" name="quiz5" value="intervalOver">C. intervalOver</p>
+      <p><input type="radio" name="quiz5" value="None of the above">D.  None of the above</p>
     </div>
-    <input type="button" name="" value="SUBMIT">
+    
     </form>
 
   </div>
+  <input type="button" name="" value="SUBMIT">
+</section>
+<!--javascript-->
+<script type="text/javascript" src=js/scripts.js></script>
 </body>
 </html>
