--- a/page3.html
+++ b/page3.html
@@ -56,7 +56,7 @@
     </form>
 
   </div>
-  <input type="button" name="" value="SUBMIT">
+  <input type="button" name="" value="SUBMIT" onclick="output()">
 </section>
 <!--javascript-->
 <script type="text/javascript" src=js/scripts.js></script>
