--- a/page3.html
+++ b/page3.html
@@ -5,8 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/style.css">
- 
-  <title>Quizzes</title>
+  <!--javascript-->
+<script type="text/javascript" src="javascript/index.js"></script>
+ <title>Quizzes</title>
 </head>
 <body>
   <section class="container">
@@ -58,7 +59,6 @@
   </div>
   <input type="button" name="" value="SUBMIT" onclick="output()">
 </section>
-<!--javascript-->
-<script type="text/javascript" src=js/scripts.js></script>
+
 </body>
 </html>
