--- a/page3.html
+++ b/page3.html
@@ -12,7 +12,7 @@
 <body>
   <section class="container">
   <div class="question">
-    <form name="form-quiz" id="form1">
+    <form name="quiz" id="form1">
 
     <div>
       <p>1. Which of the following are not server-side Javascript objects? </p>
@@ -57,7 +57,8 @@
     </form>
 
   </div>
-  <input type="button" name="" value="SUBMIT" onclick="output()">
+
+  <input type="button" id="btnn" name="" value="SUBMIT" onclick="output()">
 </section>
 
 </body>
