modify the titile of the page

--- a/javascript/page4.html
+++ b/javascript/page4.html
@@ -7,34 +7,9 @@
   <link rel="stylesheet" href="./assets/style.css">
     <!--javascript-->
 <script type="text/javascript" src="javascript/index.js"></script>
-  <title>Quizzes</title>
+  <title>Results</title>
 </head>
 <body>
-  <section class="header">
-  <div class="quiz">
-    <h1>MASOMO BORA HIGH SCHOOL</h1>
-    <h2>Intergrated Examination Management System</h2>
- </div>
-  <div class="take-quiz">
-    <h2>Instructions</h2>
-    
-    <ul>
-      <li><p>this test consist of twoo section ensure you answer all</p></li>
-      <li><p>answer all question provided</p></li>
-      <li><p>this test consist of twoo section ensure you answer all</p></li>
-      <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></li>
-      <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></li>
-    </ul>
-   
-      <div class="inputbx">
-        <a href="page2.html">submit</a>
-      
-      </div>
-
-
-    </form>
-
-  </div>
-  </section>
+  
 </body>
 </html>
