add page4 html code

--- a/javascript/page4.html
+++ b/javascript/page4.html
@@ -10,6 +10,18 @@
   <title>Results</title>
 </head>
 <body>
+  <section class="contain">
+    
+      <h1>Your Perfomance</h1>
+    <div id="result" class="score">
+      <h3>Overall score</br></h3>
+      <span id="results"></span></br>
+      <input type="button" id="btnn" name="" value="Revisit" onclick="repeat()">
+     
+    </div>
+
+
+  </section>
   
 </body>
 </html>
