style the nextbutton

--- a/page4.html
+++ b/page4.html
@@ -11,16 +11,16 @@
 </head>
 <body>
   <section class="contain">
-    
+    <div class="container-1">
       <h1>Your Perfomance</h1>
     <div id="result" class="score">
       <h3>Overall score</br></h3>
       <span id="results"></span></br>
-      <input type="button" id="btnn" name="" value="Revisit" onclick="repeat()">
+      <input type="button" id="btnn-1" name="" value="Revisit" onclick="repeat()">
      
     </div>
 
-
+  </div>
   </section>
   
 </body>
