--- a/page3.html
+++ b/page3.html
@@ -62,6 +62,6 @@
 
   <input type="button" id="btnn" name="" value="SUBMIT" onclick="output()">
 </section>
-
+ <h1 id="result"></h1>
 </body>
 </html>
