remove page2.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2>Intergrated Examination Management System</h2>
 
   <div class="formbx">
-    <h2>Enter user Details</h2>
+    <h2>Enter your Details</h2>
 
     <form>
 
